# snagged-admin

./: .env.example  .gitignore  README.md  pyproject.toml  sources.yaml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: README.md  auth-check.yml  probe-oxley.yml  probe-spaceship-endpoints.yml  raw-cache-retention.yml  slack-check.yml  source-afternic.yml  source-atom-daily.yml  source-atom-wholesale.yml  source-auctions-publish.yml  source-auctions-watchdog.yml  source-braden-pollack-portfolio.yml  source-drive-auction-uploads.yml  source-dropcatch-auctions.yml  source-dynadot-auctions.yml  source-dynadot-dump.yml  source-efty-partner.yml  source-godaddy-auctions.yml  source-namecheap-auctions.yml  tests.yml  (+12 more)
dashboard/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: domain-dumps-and-platform-workflows-spec.md  domain-dumps-and-platform-workflows.md  naming-exercise-v1-spec.md
tests/: test_afternic.py  test_atom_daily.py  test_atom_wholesale.py  test_auctions_orchestrator.py  test_auctions_sheet.py  test_doctor.py  test_drive_auction_uploads.py  test_dropcatch_auctions.py  test_dynadot_namesilo.py  test_efty_partner.py  test_filters_auction.py  test_filters_standard.py  test_godaddy_auctions.py  test_namecheap_auctions.py  test_namecheap_bin.py  test_namejet_lastchance.py  test_parkio_auctions.py  test_raw_cache_retention.py  test_scoring.py  test_sedo_expired_auctions.py  test_sedo_net_new.py  test_sheets_publisher.py  test_slack_publisher.py  test_smoke.py  test_universe.py  test_universe_supabase_writer.py
(+158 files in other folders)
