[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketplace-pipeline"
version = "0.1.0"
description = "Marketplace data pipelines feeding Slack, Google Sheets, and the name universe."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "requests>=2.31",
    "slack-sdk>=3.26",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "duckdb>=0.10",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "wordfreq>=3.1",
    "supabase>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
pipeline = "marketplace_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/marketplace_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
